# SemVer2

./: LICENSE  README.md  SemVer2.cabal
app/: Main.hs
src/Parsers/: SemVer2.hs
test/: Spec.hs
