name:                SemVer2
version:             0.1.0.0
synopsis:            Parser for Semantic Versioning 2.0.0
description:         Please see README.md
homepage:            http://github.com/stites/SemVer2#readme
license:             MIT
license-file:        LICENSE
author:              Sam Stites
maintainer:          sam@stites.io
copyright:           Copyright: (c) 2015-2016 Sam Stites
category:            Parsers
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parsers.SemVer2
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , bytestring
  default-language:    Haskell2010

test-suite SemVer2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SemVer2
                     , trifecta
                     , bytestring
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stites/SemVer2
